[FIX] reduce gap between footer and main]

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,13 +42,14 @@ body {
 }
 
 header {
-  z-index: 2;
+  z-index: 3;
   max-width: 100%;
 }
 
 main {
-  z-index: 1;
+  z-index: 2;
   height: fit-content;
+  float: left;
   background: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
 }
 
